--- a/print.html
+++ b/print.html
@@ -2579,26 +2579,18 @@ explicitly.</p>
 Travis, but remember that this may break the build when something changes)
 without requiring a change to the code.</p>
 <p>Alternatively, we can specify the lints that we want to <code>deny</code> in the code.
-Here is a list of warning lints that is (hopefully) safe to deny:</p>
+Here is a list of warning lints that is (hopefully) safe to deny (as of Rustc 1.48.0):</p>
 <pre><code class="language-rust ignore">#[deny(bad-style,
        const-err,
        dead-code,
-       extra-requirement-in-impl,
        improper-ctypes,
-       legacy-directory-ownership,
        non-shorthand-field-patterns,
        no-mangle-generic-items,
        overflowing-literals,
        path-statements ,
        patterns-in-fns-without-body,
-       plugin-as-library,
        private-in-public,
-       private-no-mangle-fns,
-       private-no-mangle-statics,
-       raw-pointer-derive,
-       safe-extern-statics,
        unconditional-recursion,
-       unions-with-drop-fields,
        unused,
        unused-allocation,
        unused-comparisons,
