deploy: 84bf81a47f09119e1109bdacfbaaf554a65aa579

--- a/anti_patterns/deref.html
+++ b/anti_patterns/deref.html
@@ -266,8 +266,12 @@ operator is a case where the ergonomics strongly favour an implicit mechanism,
 but the intention is that this is limited to degrees of indirection, not
 conversion between arbitrary types.</p>
 <h2><a class="header" href="#see-also" id="see-also">See also</a></h2>
-<p><a href="../idioms/deref.html">Collections are smart pointers idiom</a>.</p>
-<p><a href="https://doc.rust-lang.org/std/ops/trait.Deref.html">Documentation for <code>Deref</code> trait</a>.</p>
+<ul>
+<li><a href="../idioms/deref.html">Collections are smart pointers idiom</a>.</li>
+<li>Delegation crates for less boilerplate like <a href="https://crates.io/crates/delegate">delegate</a>
+or <a href="https://crates.io/crates/ambassador">ambassador</a></li>
+<li><a href="https://doc.rust-lang.org/std/ops/trait.Deref.html">Documentation for <code>Deref</code> trait</a>.</li>
+</ul>
 
                     </main>
 
