--- a/print.html
+++ b/print.html
@@ -2716,8 +2716,12 @@ operator is a case where the ergonomics strongly favour an implicit mechanism,
 but the intention is that this is limited to degrees of indirection, not
 conversion between arbitrary types.</p>
 <h2><a class="header" href="#see-also-18" id="see-also-18">See also</a></h2>
-<p><a href="anti_patterns/../idioms/deref.html">Collections are smart pointers idiom</a>.</p>
-<p><a href="https://doc.rust-lang.org/std/ops/trait.Deref.html">Documentation for <code>Deref</code> trait</a>.</p>
+<ul>
+<li><a href="anti_patterns/../idioms/deref.html">Collections are smart pointers idiom</a>.</li>
+<li>Delegation crates for less boilerplate like <a href="https://crates.io/crates/delegate">delegate</a>
+or <a href="https://crates.io/crates/ambassador">ambassador</a></li>
+<li><a href="https://doc.rust-lang.org/std/ops/trait.Deref.html">Documentation for <code>Deref</code> trait</a>.</li>
+</ul>
 <h1><a class="header" href="#functional-usage-of-rust" id="functional-usage-of-rust">Functional Usage of Rust</a></h1>
 <p>Rust is an imperative language, but it follows many
 <a href="https://en.wikipedia.org/wiki/Functional_programming">functional programming</a> paradigms.</p>
