--- a/anti_patterns/deny-warnings.html
+++ b/anti_patterns/deny-warnings.html
@@ -243,6 +243,7 @@ Here is a list of warning lints that is (hopefully) safe to deny (as of Rustc 1.
 certain that there will be more deprecated APIs in the future.</p>
 <h2><a class="header" href="#see-also" id="see-also">See also</a></h2>
 <ul>
+<li><a href="https://rust-lang.github.io/rust-clippy/master">A collection of all clippy lints</a></li>
 <li><a href="https://doc.rust-lang.org/reference/attributes.html#deprecation">deprecate attribute</a> documentation</li>
 <li>Type <code>rustc -W help</code> for a list of lints on your system. Also type
 <code>rustc --help</code> for a general list of options</li>
