--- a/idioms/rustdoc-init.html
+++ b/idioms/rustdoc-init.html
@@ -233,9 +233,9 @@ invoked.</p>
 <h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
 <p>This is much more concise and avoids repetitive code in examples.</p>
 <h2><a class="header" href="#disadvantages" id="disadvantages">Disadvantages</a></h2>
-<p>As example is in a function, the code will not be tested. Though it still will
+<p>As example is in a function, the code will not be tested. Though it will still be
 checked to make sure it compiles when running a <code>cargo test</code>. So this pattern is
-most useful when need <code>no_run</code>. With this, you do not need to add <code>no_run</code>.</p>
+most useful when you need <code>no_run</code>. With this, you do not need to add <code>no_run</code>.</p>
 <h2><a class="header" href="#discussion" id="discussion">Discussion</a></h2>
 <p>If assertions are not required this pattern works well.</p>
 <p>If they are, an alternative can be to create a public method to create a helper
