--- a/print.html
+++ b/print.html
@@ -1310,9 +1310,9 @@ invoked.</p>
 <h2><a class="header" href="#advantages-9" id="advantages-9">Advantages</a></h2>
 <p>This is much more concise and avoids repetitive code in examples.</p>
 <h2><a class="header" href="#disadvantages-9" id="disadvantages-9">Disadvantages</a></h2>
-<p>As example is in a function, the code will not be tested. Though it still will
+<p>As example is in a function, the code will not be tested. Though it will still be
 checked to make sure it compiles when running a <code>cargo test</code>. So this pattern is
-most useful when need <code>no_run</code>. With this, you do not need to add <code>no_run</code>.</p>
+most useful when you need <code>no_run</code>. With this, you do not need to add <code>no_run</code>.</p>
 <h2><a class="header" href="#discussion-5" id="discussion-5">Discussion</a></h2>
 <p>If assertions are not required this pattern works well.</p>
 <p>If they are, an alternative can be to create a public method to create a helper
@@ -2281,7 +2281,7 @@ query the number of CPUs on a machine.</p>
 <h2><a class="header" href="#description-25" id="description-25">Description</a></h2>
 <p>If you have <code>unsafe</code> code, create the smallest possible module that can uphold
 the needed invariants to build a minimal safe interface upon the unsafety. Embed
-this into a larger module that contains only safe code and presents an ergonomi
+this into a larger module that contains only safe code and presents an ergonomic
 interface. Note that the outer module can contain unsafe functions and methods
 that call directly into the unsafe code. Users may use this to gain speed benefits.</p>
 <h2><a class="header" href="#advantages-17" id="advantages-17">Advantages</a></h2>
